# PyGiCo

./: .gitignore  README.md  pyproject.toml  setup.py
.aira/: config.releasenotes.yml
.harmon_ai/: README_template.md  publish-to-pypi.yml  repository_summary_raw.md  sections_template_llm.md
example/: README.md  cli_usage.sh  gimp_script_config.json  gimp_script_template.py  python_usage.py  python_usage_flux.py  python_usage_flux_simple.py  sample_blog.md  workflow.json
pygico_imagegen/: __init__.py  cli.py  config.py
pygico_imagegen/content_analysis/: blog_extractor.py  prompt_generator.py  prompt_generator_flux.py
pygico_imagegen/image_generation/: comfy_interface.py
pygico_imagegen/image_processing/: gimp_executor.py
pygico_imagegen/utils/: config_manager.py
script/: act.bat  activate-PyGiCo_release.bat
tests/: README.md  test_blog_extractor.py
workflow/: workflow_api_flux.json
