[tool.poetry]
name = "pygico-imagegen"
version = "0.1.0"
description = "Python, GIMP, and ComfyUI based image generation and text addition tool"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pygico_imagegen"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "sphinx",
    "sphinx-rtd-theme",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"


[project.scripts]
pygico-imagegen = "pygico_imagegen.cli:main"

[tool.setuptools]
packages = ["pygico_imagegen"]
